# JdkManagement

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  build.ps1
docs/: design.md  download.md
scripts/: install-jkm.ps1  package-jkm.ps1  uninstall-jkm.ps1
src/: main.cpp
src/app/: app.cpp  app.h
src/core/: metadata.h  models.cpp  models.h  paths.cpp  paths.h  store.cpp  store.h
src/infrastructure/: audit.cpp  audit.h  logger.cpp  logger.h  platform_windows.cpp  platform_windows.h  process.cpp  process.h
src/installer/: installer.cpp
src/providers/: download_helpers.cpp  download_helpers.h  python_runtime.cpp  python_runtime.h  temurin.cpp  temurin.h  tool_runtime.cpp  tool_runtime.h
src/resources/: jkm.rc  version_info.h
